--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@ Example/.DS_Store
 *.xcuserstate
 
 *.xcuserstate
+
+Example/PLMediaStreamingKitDemo.xcworkspace/xcuserdata/ly.xcuserdatad/UserInterfaceState.xcuserstate
